Add 'Go to user' field for users admin page
Fixes https://rollbar.com/zazo/zazo-server/items/52/

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -24,3 +24,5 @@ en:
   device_platforms:
     ios: iOS
     android: Android
+  messages:
+    user_not_found: User not found with ID or mkey %{query}
