--- a/changes.txt
+++ b/changes.txt
@@ -1,3 +1,6 @@
+v2.9.5
+:hammer: Added invitee name to landing connection page (/c/:id requests)
+
 v2.9.4
 :hammer: API: changed type of connection id from integer to string
 
