--- a/changes.txt
+++ b/changes.txt
@@ -1,3 +1,7 @@
+v2.9.6
+:bulb: Implemented receive_permanent_error_video link for connection
+:bulb: Implemented receive_long_test_video_path link for connection
+
 v2.9.5
 :bulb: Allowed ios clients to use auto notification feature
 
